--- a/Resources/Prototypes/Entities/Stations/base.yml
+++ b/Resources/Prototypes/Entities/Stations/base.yml
@@ -88,8 +88,8 @@
           paths:
           - /Maps/_Funkystation/Shuttles/mining.yml #funky
         oldstation: !type:GridSpawnGroup #force this to always spawn so ghost roles are always accessible
-          minimumDistance: 950 #unlikely to work
-          maximumDistance: 1200
+          minimumDistance: 1200 
+          maximumDistance: 2500
           stationGrid: false
           paths:
           - /Maps/_Funkystation/Ruins/oldstation.yml
